--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -5,6 +5,7 @@ annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 application.title=MayraSalazar_Proyecto3
 application.vendor=mayra
+auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -29,11 +30,29 @@ dist.jar=${dist.dir}/MayraSalazar_Proyecto3.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.Downloads-Graphstream=/home/mayra/Downloads/Graphstream
+file.reference.gs-algo-1.3-javadoc.jar=/home/mayra/Downloads/Graphstream/gs-algo-1.3/gs-algo-1.3-javadoc.jar
+file.reference.gs-algo-1.3-sources.jar=/home/mayra/Downloads/Graphstream/gs-algo-1.3/gs-algo-1.3-sources.jar
+file.reference.gs-algo-1.3.jar=/home/mayra/Downloads/Graphstream/gs-algo-1.3/gs-algo-1.3.jar
+file.reference.gs-core-1.3-javadoc.jar=/home/mayra/Downloads/Graphstream/gs-core-1.3/gs-core-1.3-javadoc.jar
+file.reference.gs-core-1.3-sources.jar=/home/mayra/Downloads/Graphstream/gs-core-1.3/gs-core-1.3-sources.jar
+file.reference.gs-core-1.3.jar=/home/mayra/Downloads/Graphstream/gs-core-1.3/gs-core-1.3.jar
+file.reference.gs-ui-1.3-javadoc.jar=/home/mayra/Downloads/Graphstream/gs-ui-1.3/gs-ui-1.3-javadoc.jar
+file.reference.gs-ui-1.3-sources.jar=/home/mayra/Downloads/Graphstream/gs-ui-1.3/gs-ui-1.3-sources.jar
+file.reference.gs-ui-1.3.jar=/home/mayra/Downloads/Graphstream/gs-ui-1.3/gs-ui-1.3.jar
 includes=**
+jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
+jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${file.reference.Downloads-Graphstream}
+    ${file.reference.gs-algo-1.3-javadoc.jar}:\
+    ${file.reference.gs-algo-1.3-sources.jar}:\
+    ${file.reference.gs-algo-1.3.jar}:\
+    ${file.reference.gs-core-1.3-javadoc.jar}:\
+    ${file.reference.gs-core-1.3-sources.jar}:\
+    ${file.reference.gs-core-1.3.jar}:\
+    ${file.reference.gs-ui-1.3-javadoc.jar}:\
+    ${file.reference.gs-ui-1.3-sources.jar}:\
+    ${file.reference.gs-ui-1.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -58,7 +77,24 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=proyecto3.Main
+jnlp.codebase.type=no.codebase
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.mixed.code=default
+jnlp.offline-allowed=false
+jnlp.signed=false
+jnlp.signing=
+jnlp.signing.alias=
+jnlp.signing.keystore=
+main.class=proyecto3.GraphMapping
+# Optional override of default Application-Library-Allowable-Codebase attribute identifying the locations where your signed RIA is expected to be found.
+manifest.custom.application.library.allowable.codebase=
+# Optional override of default Caller-Allowable-Codebase attribute identifying the domains from which JavaScript code can make calls to your RIA without security prompts.
+manifest.custom.caller.allowable.codebase=
+# Optional override of default Codebase manifest attribute, use to prevent RIAs from being repurposed
+manifest.custom.codebase=
+# Optional override of default Permissions manifest attribute (supported values: sandbox, all-permissions)
+manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
